
	* Resolves #58100: Incorrect annotation for tableName on AbstractEntity
	* Resolves #58101: Make extension incompatible with extension "uncache"
	* Resolves #56327: Add select viewHelper with values from tables (Thanks to Carsten Biebricher)
	* Resolves #58100: Incorrect annotation for tableName on AbstractEntity
	* Resolves #58107: Add countryZones to country domain model

2014-03-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.10

2014-03-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56389: Fatal error: Call to a member function getCollatingLocale() on a non-object in LocalizationUtility.php

2014-03-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56954: getIsoCodeField() is protected but needed from outside

2014-02-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #52431: Localization of nameLocalized not working in preview of attribute

2014-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.9

2014-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56038: Language Pack Generator crashes in TYPO3 6.0

2014-02-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56001: Language packs not re-applied by update script of Static Info Tables

2014-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #55952: Wrong phone code for Liechtenstein in static_countries table
	* Update version to 6.0.8

2014-02-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #55476: Deprecated CSS inclusion
	* Resolves #55744: Class TYPO3\CMS\Install\Sql\SchemaMigrator was renamed
	
2014-01-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #55183: Deprecation message - remove parameter

2014-01-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Re-create the tables whenever the extension update script in run

2014-01-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #54160: List module broken on root page
	* Follow-up to #54160: Throw exception when current language is not found in Language repository
