@@ -224,27 +224,18 @@ class ManagerController extends \TYPO3\CMS\Extbase\Mvc\Controller\ActionControll
 	 * @return string An HTML form
 	 */
 	public function testFormAction(Country $country = NULL, CountryZone $countryZone = NULL, Language $language = NULL) {
-		if (is_object($country) && (is_object($countryZone) || !$this->countryZoneRepository->findByCountry($country)->count())) {
+		if (is_object($country) && (is_object($countryZone) || !$country->getCountryZones()->count())) {
 			$this->forward('testFormResult', 'Manager', $this->extensionName, array('country' => $country, 'countryZone' => $countryZone, 'language' => $language));	
 		}
-		$countries = $this->countryRepository->findAllOrderedBy('nameLocalized');
 		if (is_object($country)) {
-			$countryZones = $this->countryZoneRepository->findByCountry($country);
-			$selectedCountry = $country->getUid();
-			$this->view->assign('selectedCountry', $country->getUid());
-		} else {
-			$countryZones = array();
+			$this->view->assign('selectedCountry', $country);
 		}
-		$languages = $this->languageRepository->findAllNonConstructedNonSacred()->toArray();
-		if (is_object($language)) {
-			$this->view->assign('selectedLanguage', $language->getUid());
-		}
-		$this->view->assign('countries', $countries);
-		$this->view->assign('countryZones', $countryZones);
 		if (is_object($countryZone)) {
-			$this->view->assign('selectedCountryZone', $countryZone->getUid());
+			$this->view->assign('selectedCountryZone', $countryZone);
 		}
-		$this->view->assign('languages', $languages);
+		if (is_object($language)) {
+			$this->view->assign('selectedLanguage', $language);
+		}
 	}
 
 	/**
