@@ -1,3 +1,4 @@
+{namespace static=SJBR\StaticInfoTables\ViewHelpers}
 <f:layout name="Default" />
 
 <f:section name="Content">
@@ -9,21 +10,23 @@
 				<label for="sjbr-static-info-tables-manager-country">{f:translate(key: 'selectCountry')}:</label>
 			</dt>
 			<dd>
-				<f:form.select id="sjbr-static-info-tables-manager-country" name="country" options="{countries}" value="{selectedCountry}" optionLabelField="nameLocalized" additionalAttributes="{onchange:'javascript:this.form.submit();'}" />
+				<static:form.select id="sjbr-static-info-tables-manager-country" name="country" staticInfoTable="country" options="{}" value="{selectedCountry}" additionalAttributes="{onchange:'javascript:this.form.submit();'}"/>
 			</dd>
-				<f:if condition="{countryZones}">
+			<f:if condition="{selectedCountry}">
+				<f:if condition="{selectedCountry.countryZones}">
 					<dt>
 						<label for="sjbr-static-info-tables-manager-country-zone">{f:translate(key: 'selectCountryZone')}:</label>
 					</dt>
 					<dd>
-						<f:form.select id="sjbr-static-info-tables-manager-country-zone" name="countryZone" options="{countryZones}" value="{selectedCountryZone}" optionLabelField="nameLocalized" />
+						<static:form.select id="sjbr-static-info-tables-manager-country-zone" name="countryZone" staticInfoTable="countryZone" staticInfoTableSubselect="{country: '{selectedCountry.uid}'}" options="{}" value="{selectedCountryZone}" />
 					</dd>
 				</f:if>
+			</f:if>
 			<dt>
 				<label for="sjbr-static-info-tables-manager-language">{f:translate(key: 'selectLanguage')}:</label>
 			</dt>
 			<dd>
-				<f:form.select id="sjbr-static-info-tables-manager-language" name="language" options="{languages}" value="{selectedLanguage}" optionLabelField="nameLocalized" sortByOptionLabel="1"/>
+				<static:form.select id="sjbr-static-info-tables-manager-language" name="language" staticInfoTable="language" options="{}" value="{selectedLanguage}" />
 			</dd>
 			<dt>
 			</dt>
